# JobSearchHelper

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/josh/: __init__.py  version.py
src/josh/scrapers/: __init__.py  theprotocol.py
src/tests/: __init__.py  test_minimal.py
