# Python project/package configuration
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=8.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/Krystyna-Szybalska/JobSearchHelper"
Issues = "https://github.com/Krystyna-Szybalska/JobSearchHelper/issues"

[project]
name = "job_search_helper"
description = "Job search automation."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
    # Build system
    "setuptools>=61",
    "setuptools-scm[toml]>=8.0",
    "wheel>=0.41",
    # Dev tools
    "pre-commit==3.6.2",
    # Code quality
    "ruff==0.2.2",
    "pytest==8.0.2",
]
# Later, we can add docs with mkdocs

[project.scripts]
# TODO: Add scripts to run things.

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }
packages = ["job_search"]

[tool.setuptools.dynamic]
version = { attr = "job_search.version.__version__" }

[tool.setuptools.package-data]

[tool.setuptools_scm]

[tool.ruff]
line-length = 105
src = ["src"]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    # "UP", # pyupgrade
    "D", # pydocstyle
]
ignore = ["D203", "D213"] # conflicting

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
# Docs: https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
minversion = "6.0"
testpaths = ["src/tests"]
